--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+@keyframes moveBackground {
+    from {
+        background-position: 0px 0px;
+    }
+
+    to {
+        background-position: 0px 200px;
+    }
+}
+
 .App {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
+    background-image: url("./res/svg/space-object.svg");
+    background-size: 200px 200px;
+    animation: moveBackground 10s linear infinite;
 }
