--- a/src/views/components/Introduction/Introduction.css
+++ b/src/views/components/Introduction/Introduction.css
@@ -1,11 +1,17 @@
 .introduction {
+    max-width: 2336px;
+    flex-wrap: wrap;
     display: flex;
     flex-direction: row;
-    flex: 1;
+    border-radius: 16px;
     flex-wrap: wrap;
+    background-image: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0.6),
+        rgba(255, 255, 255, 0.4),
+        rgba(255, 255, 255, 0.6)
+    );
+    border: 1px solid white;
     backdrop-filter: blur(5px);
     box-shadow: 0px 0px 20px 2px white;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.6));
-    border-radius: 16px;
-    border: 1px solid white;
 }
