--- a/src/views/components/LegalDocument/LegalDocument.css
+++ b/src/views/components/LegalDocument/LegalDocument.css
@@ -1,15 +1,17 @@
-.legal-document-container {
+@font-face {
+    font-family: "Roboto-Regular";
+    src: url("../../../res/fonts/Roboto-Regular.ttf");
+}
+
+.legal-document {
+    max-width: 944px;
     border-radius: 16px;
     display: flex;
     flex-direction: column;
-    flex: 1;
-    max-width: 996px;
+    align-items: center;
+    justify-content: center;
     gap: 24px;
     padding: 36px 96px;
-    /* background-color: linear-gradient(to bottom,
-            rgba(255, 255, 255, 0.6),
-            rgba(255, 255, 255, 0.4),
-            rgba(255, 255, 255, 0.6)); */
     background-image: linear-gradient(
         to bottom,
         rgba(255, 255, 255, 0.6),
@@ -17,45 +19,40 @@
         rgba(255, 255, 255, 0.6)
     );
     border: 1px solid white;
-    box-shadow: 0px 0px 20px 2px white;
     backdrop-filter: blur(5px);
+    box-shadow: 0px 0px 20px 2px white;
 }
 
-.legal-document-title-container {
+.legal-document > .legal-document-title-container {
     display: flex;
-    flex-direction: row;
+    flex: row;
     align-items: center;
     justify-content: center;
 }
 
-@font-face {
-    font-family: "Roboto-Regular";
-    src: url("../../../res/fonts/Roboto-Regular.ttf");
-}
-
-.legal-document-title {
+.legal-document > .legal-document-title-container > .legal-document-title {
     padding: 0px;
     margin: 0px;
+    text-wrap: nowrap;
     font-family: "Roboto-Regular";
+    font-size: 32px;
+    line-height: 40px;
     color: #00ffff;
     filter: drop-shadow(0px 0px 4px #00ffff);
-    font-size: 32px;
-    line-height: 42px;
-    text-wrap: nowrap;
 }
 
-.legal-document-body {
+.legal-document > .legal-document-body-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.legal-document > .legal-document-body-container > .legal-document-body {
     padding: 0px;
     margin: 0px;
-    margin-bottom: 16px;
+    text-wrap: wrap;
     font-family: "Roboto-Regular";
     font-size: 16px;
     line-height: 24px;
-    letter-spacing: 0.5px;
     color: white;
-    text-wrap: wrap;
-}
-
-.legal-document-body:last-child {
-    margin-bottom: 0px;
 }
