--- a/src/views/components/VerticalSideBar/VerticalSection.css
+++ b/src/views/components/VerticalSideBar/VerticalSection.css
@@ -1,20 +1,20 @@
-.vertical-section {
-    display: flex;
-    flex-direction: column;
-    width: 80px;
-    height: 72px;
-    flex-basis: auto;
-    padding: 0px 4px;
-    box-sizing: border-box;
-    gap: 8px;
-    justify-content: flex-start;
-    align-items: center;
-    cursor: pointer;
-}
-
 @font-face {
     font-family: "Roboto-Medium";
     src: url(../../../res/fonts/Roboto-Medium.ttf);
+}
+
+.vertical-section {
+    width: 80px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+.vertical-section > .icon {
+    width: 48px;
+    height: 48px;
 }
 
 .section-title {
