--- a/src/views/components/VerticalSideBar/VerticalSideBar.css
+++ b/src/views/components/VerticalSideBar/VerticalSideBar.css
@@ -1,11 +1,18 @@
 .vertical-side-bar {
     width: 80px;
     height: 100%;
-    background-color: #37393e;
-    box-shadow: 0px 0px 20px 2px white;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 16px;
+    padding: 20px 0px;
+    background-color: #37393e;
+    border-right: 1px solid #e1e2e9;
+    box-shadow: 0px 0px 20px 2px white;
     position: fixed;
-    padding-top: 20px;
+}
+
+.vertical-side-bar > .logo {
+    width: 36px;
+    height: 36px;
 }
