--- a/src/views/screens/PostScreen/PostScreen.css
+++ b/src/views/screens/PostScreen/PostScreen.css
@@ -1,8 +1,9 @@
-.policy-screen {
+.post-screen {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 96px;
     padding: 96px 48px;
+    justify-content: center;
     align-items: center;
     margin-left: 80px;
 }
