--- a/src/views/components/CTAButton/CTAButton2.css
+++ b/src/views/components/CTAButton/CTAButton2.css
@@ -3,19 +3,38 @@
     src: url(../../../res/fonts/Roboto-Regular.ttf);
 }
 
-.cta-button-2 {
-    border-radius: 26px;
-    padding: 12px 16px;
-    background-color: transparent;
-    border: 1px solid transparent;
-    transition: 150ms;
+@media only screen and (min-width: 768px) {
+    .cta-button-2 {
+        border-radius: 26px;
+        padding: 12px 16px;
+        background-color: transparent;
+        border: 1px solid transparent;
+        transition: 150ms;
+    }
+
+    .cta-button-2:hover {
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.3);
+        border: 1px solid white;
+    }
 }
 
-.cta-button-2:hover {
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.3);
-    border: 1px solid white;
+@media only screen and (max-width: 767px) {
+    .cta-button-2 {
+        border-radius: 26px;
+        padding: 8px 12px;
+        background-color: transparent;
+        border: 1px solid transparent;
+        transition: 150ms;
+    }
+
+    .cta-button-2:hover {
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.3);
+        border: 1px solid white;
+    }
 }
+
 .cta-button-2 > .cta-sentence {
     padding: 0px;
     margin: 0px;
