--- a/src/views/components/Introduction/Figure.css
+++ b/src/views/components/Introduction/Figure.css
@@ -1,20 +1,40 @@
-.figure-container {
-    min-width: 428px;
-    max-width: 945px;
-    height: 496px;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    align-items: center;
-    justify-content: center;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
+@media only screen and (min-width: 768px) {
+    .figure-container {
+        min-width: 428px;
+        max-width: 945px;
+        height: 496px;
+        display: flex;
+        flex-direction: row;
+        flex: 1;
+        align-items: center;
+        justify-content: center;
+        border-right: 1px solid white;
+        border-bottom: 1px solid white;
+    }
+
+    .figure-container > .figure {
+        width: 416px;
+        height: 416px;
+        border-radius: 8px;
+        border: 2px solid white;
+        box-shadow: 0px 0px 50px 10px rgba(255, 255, 225, 0.5);
+    }
 }
 
-.figure-container > .figure {
-    width: 416px;
-    height: 416px;
-    border-radius: 8px;
-    border: 2px solid white;
-    box-shadow: 0px 0px 50px 10px rgba(255, 255, 225, 0.5);
+@media only screen and (max-width: 767px) {
+    .figure-container {
+        display: flex;
+        flex-direction: row;
+        padding: 16px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .figure-container > .figure {
+        width: 240px;
+        height: 240px;
+        border-radius: 8px;
+        border: 2px solid white;
+        box-shadow: 0px 0px 20px 2px rgba(255, 255, 225, 0.5);
+    }
 }
