--- a/src/views/components/Introduction/Introduction.css
+++ b/src/views/components/Introduction/Introduction.css
@@ -1,17 +1,36 @@
-.introduction {
-    max-width: 2336px;
-    flex-wrap: wrap;
-    display: flex;
-    flex-direction: row;
-    border-radius: 16px;
-    flex-wrap: wrap;
-    background-image: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0.6),
-        rgba(255, 255, 255, 0.4),
-        rgba(255, 255, 255, 0.6)
-    );
-    border: 1px solid white;
-    backdrop-filter: blur(5px);
-    box-shadow: 0px 0px 20px 2px white;
+@media only screen and (min-width: 768px) {
+    .introduction {
+        max-width: 2336px;
+        border-radius: 16px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        background-image: linear-gradient(
+            to right,
+            rgba(255, 255, 255, 0.6),
+            rgba(255, 255, 255, 0.4),
+            rgba(255, 255, 255, 0.6)
+        );
+        border: 1px solid white;
+        backdrop-filter: blur(5px);
+        box-shadow: 0px 0px 20px 2px white;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .introduction {
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        background-image: linear-gradient(
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(255, 255, 255, 0.4),
+            rgba(255, 255, 255, 0.6)
+        );
+        border: 1px solid white;
+        backdrop-filter: blur(5px);
+        box-shadow: 0px 0px 20px 2px white;
+    }
 }
