--- a/src/views/screens/PolicyScreen/PolicyScreen.css
+++ b/src/views/screens/PolicyScreen/PolicyScreen.css
@@ -1,8 +1,20 @@
-.policy-screen {
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
-    padding: 96px 48px;
-    align-items: center;
-    margin-left: 80px;
+@media only screen and (min-width: 768px) {
+    .policy-screen {
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
+        padding: 96px 48px;
+        align-items: center;
+        margin-left: 80px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .policy-screen {
+        display: flex;
+        flex-direction: column;
+        gap: 48px;
+        padding: 48px 24px;
+        align-items: center;
+    }
 }
